// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createVirtualAudioGraph optionally takes output parameter 1`] = `
{
  "gain": {
    "inputs": [],
    "value": 1,
  },
  "inputs": [
    {
      "gain": {
        "inputs": [],
        "value": 0.2,
      },
      "inputs": [],
      "name": "GainNode",
    },
  ],
  "name": "GainNode",
}
`;

exports[`createVirtualAudioGraph optionally takes output parameter 2`] = `
{
  "inputs": [
    {
      "gain": {
        "inputs": [],
        "value": 0.2,
      },
      "inputs": [],
      "name": "GainNode",
    },
  ],
  "name": "AudioDestinationNode",
}
`;
